--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm install && node server.js",
     "start": "node server.js"
   },
   "author": "Barath Nadar",
@@ -13,8 +13,6 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.25",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "mongoose": "^5.9.25"
   }
 }
